# SoC

./: .clang-tidy  .clangd  .emmyrc.json  .gitattributes  .gitignore  .gitmodules  doxyfile  pyproject.toml  requirements.txt  xmake.lua
SoC/: xmake.lua
SoC/assets/: font.data  spwm.data
SoC/crt/: common.cppm  interface.cppm  itanium_abi.cpp  stm32f407_irq.cppm  stm32f407_startup.cpp  xmake.lua
SoC/freestanding/: allocator.cppm  fmt.cppm  functional.cppm  heap.cpp  heap.cppm  io.cppm  pid.cppm  priority_queue.cppm  ring_buffer.cppm  utils.cppm  xmake.lua
SoC/include/: adc.hpp  allocator.hpp  coroutine.hpp  dma.hpp  exti.hpp  fmt.hpp  functional.hpp  gpio.hpp  heap.hpp  i2c.hpp  init.hpp  io.hpp  nvic.hpp  oled.hpp  pch.hpp  pid.hpp  priority_queue.hpp  ring_buffer.hpp  syscfg.hpp  tim.hpp  usart.hpp  utils.hpp
SoC/src/: STM32F407VGTX_FLASH.ld  adc.cpp  allocator.cpp  assert.cpp  dma.cpp  exti.cpp  gpio.cpp  heap.cpp  i2c.cpp  init.cpp  main.cpp  nvic.cpp  oled.cpp  syscfg.cpp  tim.cpp  usart.cpp  utils.cpp
SoC/std/: interface.cppm  xmake.lua
config/: clang.txt  debug.txt  gcc.txt  gcc_debug.txt  gcc_minsizerel.txt  gcc_release.txt  gcc_releasedbg.txt  minsizerel.txt  release.txt  releasedbg.txt
libSoC/: xmake.lua
libSoC/assets/: font_16x16.data  font_8x16.data  spwm.data
libSoC/crt/: common.cppm  crt.cpp  implementation.cpp  interface.cppm  itanium_abi.cpp  startup.cpp  stm32f407_irq.cpp  stm32f407_irq.cppm  stm32f407_startup.cpp  xmake.lua
libSoC/freestanding/: allocator.cppm  coroutine.cppm  fmt.cppm  functional.cppm  io.cppm  (+9 more)
script/: STM32F407.svd
(+173 files in other folders)
